--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@
   background: url("../img/fundonetflixx.jpg");
   background-size: cover;
 }
+.gradient{
+  width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(to top, rgba(2, 2, 2, .7) 0,rgba(0, 0, 0, 0.459) 60%, rgba(0, 0, 0, .7) 100%) ;
+}
 #menu {
   display: flex;
   background: rgba(15, 15, 15, 0.363);
@@ -104,6 +109,6 @@
   width: 470px;
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
-  font-size: 18px;
+  font-size: 20px;
   padding-left: 8px;
 }
